--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -85,7 +85,7 @@ The key concepts gathered from the study of this passage: By one man. Law and tr
 
 ##  [<u>Romans 6:1-11</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-06-v01-11 %})
 
-The key concepts gathered from the study of this passage: Remain in sin so that grace may increase? Died to sin. Buried with Christ. No longer be enslaved to sin. Death leads to life. Once for all.
+The key concepts gathered from the study of this passage: Remain in sin so that grace may increase? Died to sin. Buried with Christ. No longer enslaved to sin. Death leads to life. Once for all.
 
 ## First writing of Romans study (2015)
 
