--- a/_posts/bible-studies/Romans/2022-11-13-Romans-06-v01-11.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-06-v01-11.md
@@ -55,7 +55,7 @@ This is how you die to sin: you die to the law through the body of Christ.
 
 Are you familiar with the Buddhist concept of self-annihilation? Other religious endeavors may have similar terms, but they all point to the ultimate goal of destroying the self, which is a hindrance to their highest spiritual achievement. We are given the free gift of being buried with Christ, which also means we are dead to sin, so our sin debt is all paid for, and we are free from this law: *"the soul that sins, it shall die"* (Ezekiel 18:20).
 
-## NO LONGER BE ENSLAVED TO SIN
+## NO LONGER ENSLAVED TO SIN
 
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>6</sup>We know that our old man was crucified with him so that the body of sin would no longer dominate us, so that we would <strong>no longer be enslaved to sin</strong>. <sup>7</sup>(<strong>For someone who has died has been freed from sin</strong>) (Romans 6:6-7).</i></span>
