--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -84,6 +84,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bở
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Ở trong tội lỗi để ân điển dư dật? Chết vì tội lỗi. Bị chôn với Ngài. Không phục dưới tội lỗi nữa. Sự chết dẫn đến sự sống. Một lần đủ cả.
 
+##  [<u>Rô-ma 6:12-14</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-06-v12-14-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chớ để tội lỗi cai trị. Anh em chẳng thuộc dưới luật pháp. Lẽ thật giải phóng.
+
 ## Lần viết đầu tiên - 2015
 
 Những lời Phao-lô viết trong sách Rô-ma thường bị hiểu lầm, hoặc đọc với nhiều nghi vấn, rằng nó có thể cho người đọc được tự do phạm tội. Đây không phải là ý của Romans 3:20. Nói một cách thực tế, câu đó tuyên bố rằng dù có làm điều lành bạn cũng không được gần Chúa hơn, hoặc làm điều dữ cũng không khiến bạn xa Chúa hơn, vì mục đích chính của luật pháp là chỉ cho chúng ta thấy tình trạng tội lỗi của mình. Nó là tia quang tuyến chiếu vào lòng người cho thấy tình trạng hư hoại tận cùng. Nó chẳng chữa lành, cũng chẳng ban sự sống.
