--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -85,7 +85,11 @@ The key concepts gathered from the study of this passage: By one man. Law and tr
 
 ##  [<u>Romans 6:1-11</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-06-v01-11 %})
 
-The key concepts gathered from the study of this passage: Remain in sin so that grace may increase? Died to sin. Buried with Christ. No longer enslaved to sin. Death leads to life. Once for all.
+The key concepts gathered from the study of this passage: By one man. Law and transgression.
+
+##  [<u>Romans 6:12-14</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-06-v12-14 %})
+
+The key concepts gathered from the study of this passage: Do not let sin reign. You are not under law. The truth will set you free.
 
 ## First writing of Romans study (2015)
 
