--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -91,6 +91,10 @@ The key concepts gathered from the study of this passage: By one man. Law and tr
 
 The key concepts gathered from the study of this passage: Do not let sin reign. You are not under law. The truth will set you free.
 
+##  [<u>Romans 6:15-23</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-06-v15-23 %})
+
+The key concepts gathered from the study of this passage: Shall we sin? You are slaves of the one you obey. Present your members. Those things. Freedom from sin. The payoff of sin.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
