--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-06-v15-23-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-06-v15-23-Viet.md
@@ -30,7 +30,7 @@ comments_locked: false
 
 Đây có thể là lý do Phao-lô thấy ông phải viết xuống câu kinh thánh trên để giải tỏa quan tâm của họ. Nhưng thực ra, chúng ta có thể dễ dàng dẫn chứng cho thấy không có luật pháp không có nghĩa là người ta đổ xô đến để phạm tội. Chẳng hạn như, không có luật cấm người ta nhảy xuống từ lầu cao không có nghĩa là người ta ùn ùn nhảy vào chỗ chết. Không có luật cấm ăn thực phẩm có số lượng tinh bột cao không có nghĩa là khiến nhiều người bị tiểu đường tự do ăn nhiều đồ ngọt.
 
-Vì thế, chúng ta phải ngừng dùng biện luận rằng ân điển xúi giục người ta phạm tội. Về một phương diện khác, Chúa đã có một chủ định khác khi Ngài ban luật pháp cho loài người. Là Ngài muốn dùng luật pháp cho nhân loại thấy họ cần Đấng Cứu Thế. Vì thế, luật pháp đóng một vai trò quan trọng trong sự dẫn loài người đến với đức tin, nhưng không phải theo cách mà họ vẫn thường nghĩ. Câu kinh thánh dưới đây cho thấy chúng ta là tội nhân chẳng phải vì các tội mình đã phạm, nhưng bởi không tin nơi Đấng mà Đức Chúa Trời đã sai đến.
+Vì thế, chúng ta phải ngừng dùng biện luận rằng ân điển xúi giục người ta phạm tội. Về một phương diện khác, Chúa đã có một chủ định khác khi Ngài ban luật pháp cho loài người. Là Ngài muốn dùng luật pháp cho nhân loại thấy họ cần Đấng Cứu Thế. Vì thế, luật pháp đóng một vai trò quan trọng trong sự dẫn loài người đến với đức tin, nhưng không ích gì để giúp người tin Chúa sống đời tin kính. Một khi kẻ có tội trở về cùng Chúa, vai trò hướng dẫn của luật pháp chấm dứt (Galatians 3:24). Câu kinh thánh dưới đây cho thấy chúng ta là tội nhân chẳng phải vì các tội mình đã phạm, nhưng bởi không tin nơi Đấng mà Đức Chúa Trời đã sai đến.
 
 > <sup>8</sup>Khi Ngài đến thì sẽ khiến thế gian <strong>tự cáo về tội lỗi</strong>, về sự công bình và về sự phán xét. <sup>9</sup><strong>Về tội lỗi, vì họ không tin ta</strong>; (John 16:8-9)
 
