--- a/_posts/bible-studies/Romans/2022-11-13-Romans-06-v15-23.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-06-v15-23.md
@@ -31,7 +31,7 @@ comments_locked: false
 
 This could be the reason Paul felt compelled to write this verse in order to address people's concerns. But we can easily find examples where the absence of a specific law does not cause people to sin. For example, the absence of a law prohibiting people from jumping from tall buildings does not result in people freely jumping to their deaths. The absence of a law prohibiting high carbohydrate content foods does not cause diabetics to consume more sweets.
 
-As a result, the argument that grace encourages sin can be put to rest. God, on the other hand, has a different purpose in mind when he gave mankind commandments. They are intended to demonstrate sinners' need for the Savior. So the law does play an important role in leading someone to faith in Christ, but not in the way that most people believe. The following verse shows that you are a sinner not because of your transgressions, but because you do not believe in the One God has sent.
+As a result, the argument that grace encourages sin can be put to rest. God, on the other hand, has a different purpose in mind when he gave mankind commandments. They are intended to demonstrate sinners' need for the Savior. So the law is important in leading someone to faith in Christ, but it is not beneficial for helping Christians live godly lives. Once sinners are led to Christ, the law's work as a guardian is completed (Galatians 3:24). The following verse shows that you are a sinner not because of your transgressions, but because you do not believe in the One God has sent.
 
 > <sup>8</sup>And when he [the Holy Spirit] comes, he will prove <strong>the world wrong concerning sin</strong> and righteousness and judgment - <sup>9</sup><strong>concerning sin, because they do not believe in me</strong>; (John 16:8-9)
 
