--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -96,6 +96,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Thì
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Khi còn sống. Nếu chồng chết. Anh em đã chết về luật pháp. Tội lỗi bị luật pháp xui khiến. Cách mới của Thánh Linh.
 
+##  [<u>Rô-ma 7:7-25</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-07-v07-25-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vai trò của luật pháp. Sử dụng luật pháp cách sai lầm. Điều lành chẳng ở trong tôi đâu. Ai sẽ cứu tôi?
+
 ## Lần viết đầu tiên - 2015
 
 Những lời Phao-lô viết trong sách Rô-ma thường bị hiểu lầm, hoặc đọc với nhiều nghi vấn, rằng nó có thể cho người đọc được tự do phạm tội. Đây không phải là ý của Romans 3:20. Nói một cách thực tế, câu đó tuyên bố rằng dù có làm điều lành bạn cũng không được gần Chúa hơn, hoặc làm điều dữ cũng không khiến bạn xa Chúa hơn, vì mục đích chính của luật pháp là chỉ cho chúng ta thấy tình trạng tội lỗi của mình. Nó là tia quang tuyến chiếu vào lòng người cho thấy tình trạng hư hoại tận cùng. Nó chẳng chữa lành, cũng chẳng ban sự sống.
