--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -99,6 +99,10 @@ The key concepts gathered from the study of this passage: Shall we sin? You are 
 
 The key concepts gathered from the study of this passage: As long as he lives. If her husband dies. You also died to the law. Sins aroused by the law. The new law: life of the Spirit.
 
+##  [<u>Romans 7:7-25</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-07-v07-25 %})
+
+The key concepts gathered from the study of this passage: The role of the law. Misuse of the law. Nothing good lives in me. Who will rescue me?
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
