--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-07-v07-25-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-07-v07-25-Viet.md
@@ -51,11 +51,11 @@ Khi một người có giả định là sự tuân thủ theo luật pháp sẽ
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>24</sup><strong>Khốn nạn cho tôi! Ai sẽ cứu tôi</strong> thoát khỏi thân thể hay chết nầy? <sup>25</sup>Cảm tạ Ðức Chúa Trời, nhờ Ðức Chúa Jêsus Christ, là Chúa chúng ta! Như vậy, thì chính mình tôi <strong>lấy trí khôn phục luật pháp của Ðức Chúa Trời, nhưng lấy xác thịt phục luật pháp của tội lỗi</strong>.</i></span> (Romans 7:24-25)
 
-Người tín hữu thường được khuyên giục theo đuổi những việc lành và tránh điều dữ.  Nhưng, như chúng ta đã học trong đoạn kinh thánh trước (Romans 7:14-23), những nỗ lực này kết cuộc chỉ là vô ích vì "luật pháp của tội lỗi." Chân lý này đã được nhắc lại trong câu 25.
+Người tín hữu thường được khuyên giục theo đuổi những việc lành và tránh điều dữ.  Nhưng, như chúng ta đã học trong đoạn kinh thánh trước (Romans 7:14-23), những nỗ lực này kết cuộc chỉ là vô ích vì *"luật pháp của tội lỗi."* Chân lý này đã được nhắc lại trong câu 25.
 
 Do đó, giải pháp cho chúng ta không đến từ những nỗ lực của chính mình, nhưng đến từ một nguồn từ bên ngoài, từ "*Ai."* Nếu luật pháp làm trọn được công việc của nó trong sự phô bày bản chất tội lỗi của chúng ta, thì hẳn chúng ta sẽ thở than như Phao-lô, *"Khốn nạn cho tôi!"* Tại điểm đó, chúng ta sẽ ngừng vận dụng nỗ lực của chính mình mà nhìn ra bên ngoài hầu tìm được một cứu tinh. Chúng ta sẽ không còn khoe mình về khả năng giữ mọi đòi hỏi của luật pháp và các điều răn, nhưng thay vào đó thì nhìn về Đấng khởi đầu và thành toàn của đức tin (Hebrews 12:2).
 
-Một khi chúng ta nhìn nhận tình trạng khốn khổ của mình, chúng ta mới được vào niềm tin chân thực nơi Chúa và mới được hưởng sự bình an chân thật. Đó là vì con đường duy nhất nối liền chúng ta với Chúa là Đấng Christ, chứ chẳng bởi điều gì từ những việc chúng ta làm.
+Một khi chúng ta nhìn nhận tình trạng khốn khổ của mình, chúng ta mới được vào niềm tin chân thực nơi Chúa và mới được hưởng sự bình an thật. Đó là vì con đường duy nhất nối liền chúng ta với Chúa là Đấng Christ, chứ chẳng bởi điều gì từ những việc chúng ta làm.
 
 
 {% include bible-study/bible-study-footer %}
