Small edits for Romans 8:1-8

--- a/_posts/bible-studies/Romans/2022-11-13-Romans-08-v01-08.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-08-v01-08.md
@@ -68,7 +68,7 @@ Having learned what it means to live according to the flesh, let us now consider
 
 > <sup>20</sup>I have been crucified with Christ. It is no longer I who live, but Christ who lives in me. And the life I now live in the flesh I live by faith in the Son of God, who loved me and gave himself for me. <sup>21</sup>I do not set aside God's grace, because if righteousness could come through the law, then Christ died for nothing!(Galatians 2:20)
 
-In essence, living according to the Spirit means relying on Christ's completed work on the cross. This fact must be emphasized repeatedly to counteract the appeal of false spirituality. Furthermore, any attempt to please God through the flesh is ultimately futile (v. 8)
+In essence, living according to the Spirit means relying on Christ's completed work on the cross. This fact must be emphasized repeatedly to counteract the appeal of false spirituality. Furthermore, any attempt to please God through the flesh is ultimately futile, because *"the flesh cannot please God."*
 
 
 {% include bible-study/bible-study-footer %}
