--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v01-08-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v01-08-Viet.md
@@ -67,8 +67,7 @@ Dựa theo bối cảnh đó, chúng ta có thể đi đến kết luận là *"
 
 > <sup>20</sup>Tôi đã bị đóng đinh vào thập tự giá với Ðấng Christ, mà tôi sống, không phải là tôi sống nữa, nhưng Ðấng Christ sống trong tôi; <strong>nay tôi còn sống trong xác thịt, ấy là tôi sống trong đức tin của Con Ðức Chúa Trời</strong>, là Ðấng đã yêu tôi, và đã phó chính mình Ngài vì tôi.  <sup>21</sup>Tôi không muốn làm cho ân điển Ðức Chúa Trời ra vô ích; vì <strong>nếu bởi luật pháp mà được sự công bình, thì Ðấng Christ chịu chết là vô ích</strong>. (Galatians 2:20-21)
 
-Điều trọng yếu ở đây, sống theo Thánh Linh nghĩa là nhờ cậy vào việc Chúa đã làm trọn trên cây thập tự. Chân lý này cứ phải được nhắc đi nhắc lại để chống trả sự cám dỗ của sự giả đò thiêng liêng. Thêm nữa, mọi nỗ lực để nhờ xác thịt hầu việc Chúa chỉ là vô ích (v. 8).
-
+Điều trọng yếu ở đây, sống theo Thánh Linh nghĩa là nhờ cậy vào việc Chúa đã làm trọn trên cây thập tự. Chân lý này cứ phải được nhắc đi nhắc lại để chống trả sự cám dỗ của sự giả đò thiêng liêng. Thêm nữa, mọi nỗ lực để nhờ xác thịt hầu việc Chúa chỉ là vô ích, vì *"xác thịt ... không thể đẹp lòng Đức Chúa Trời."*
 
 {% include bible-study/bible-study-footer %}
 
