--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v01-08-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v01-08-Viet.md
@@ -69,5 +69,7 @@ Dựa theo bối cảnh đó, chúng ta có thể đi đến kết luận là *"
 
 Điều trọng yếu ở đây, sống theo Thánh Linh nghĩa là nhờ cậy vào việc Chúa đã làm trọn trên cây thập tự. Chân lý này cứ phải được nhắc đi nhắc lại để chống trả sự cám dỗ của sự giả đò thiêng liêng. Thêm nữa, mọi nỗ lực để nhờ xác thịt hầu việc Chúa chỉ là vô ích, vì *"xác thịt ... không thể đẹp lòng Đức Chúa Trời."*
 
+Thay vì tìm cách để bước đi theo Thánh Linh, chúng ta phải nhận biết rằng Ngài là Đấng Chúa đã hứa ban hiện đang ở cùng hầu dẫn chúng ta vào mọi lẽ thật. Vì thế, chúng ta chỉ cần an nghỉ trong thực trạng đó và để Thánh Linh hướng dẫn mình.
+
 {% include bible-study/bible-study-footer %}
 
