--- a/_posts/bible-studies/Romans/2022-11-13-Romans-08-v01-08.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-08-v01-08.md
@@ -70,6 +70,9 @@ Having learned what it means to live according to the flesh, let us now consider
 
 In essence, living according to the Spirit means relying on Christ's completed work on the cross. This fact must be emphasized repeatedly to counteract the appeal of false spirituality. Furthermore, any attempt to please God through the flesh is ultimately futile, because *"the flesh cannot please God."*
 
+> The wind blows wherever it will, and you hear the sound it makes, but do not know where it comes from and where it is going. So it is with everyone who is born of the Spirit." (John 3:8)
+
+Instead of commanding yourself to live by the Spirit, it is more beneficial to recognize that the Holy Spirit is already living within you and guiding you towards the truth. The key is to rest in this truth, rather than striving to live by the Spirit through your own efforts.
 
 {% include bible-study/bible-study-footer %}
 
