--- a/_posts/bible-studies/Romans/2022-11-13-Romans-08-v09-13.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-08-v09-13.md
@@ -57,7 +57,7 @@ In verse 11, Paul encourages the Roman believers to stop trying to improve their
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>12</sup>So then, brothers and sisters, we are <strong>under obligation, not to the flesh, to live according to the flesh</strong> <sup>13</sup>(for if you live according to the flesh, you will die), but if <strong>by the Spirit</strong> you <strong>put to death the deeds of the body</strong> you will live.</i></span> (Romans 8:12-13)
 
-Verse 10 implies that since our bodies are already dead, we are no longer obligated to them, and all of its deeds are likewise dead. This truth was established in Romans 6:4-6, which we previously discussed, stating that we were buried and crucified with Christ. It's important to comprehend the symbolic significance of this truth. Although we are physically alive, we are regarded as having been buried and crucified with Christ. Similarly, even though our bodies continue to sin, their wrongdoing is viewed as having been erased.
+Verse 10 implies that since our bodies are already dead, we are no longer obligated to them, and all of its deeds are likewise dead. This truth was established in Romans 6:4-6, which we previously discussed, stating that we were buried and crucified with Christ. It's important to comprehend the symbolic significance of this truth. Although we are physically alive, we are regarded as having been buried and crucified with Christ. Similarly, even though our bodies continue to sin, their wrongdoing is viewed as having been erased. That is how the deeds of the body are put to death: through faith, not through works. That is how the just shall live by faith.
 
 This is only applicable to those who live by faith and are not subject to the law. In simpler terms, they do not live according to the flesh, and they are not concerned with its actions or inactions.
 
