--- a/_posts/bible-studies/Romans/2022-11-13-Romans-08-v09-13.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-08-v09-13.md
@@ -52,6 +52,10 @@ The good news is Paul declares that *"the body is [already] dead due to sin,"* a
 
 In verse 11, Paul encourages the Roman believers to stop trying to improve their dead bodies, because when Christ returns at the last trumpet, the Spirit of God who raised Jesus from the dead will also raise their bodies as incorruptible (1 Cor 15:51-52).
 
+Paul discussed in Galatians 3:1-3 the fruitless endeavor of using the flesh as a method to gradually purify oneself. In some Bible translations, the phrase *"human effort"* is rendered as *"flesh."*
+
+> <sup>1</sup>You <strong>foolish Galatians</strong>! Who has cast a spell on you? Before your eyes Jesus Christ was vividly portrayed as crucified!  <sup>2</sup>The only thing I want to learn from you is this: <strong>Did you receive the Spirit by doing the works of the law or by believing what you heard?</strong>  <sup>3</sup>Are you so foolish? Although you <strong>began with the Spirit</strong>, are you <strong>now trying to finish by human effort</strong>? (Galatians 3:1-3)
+
 ## TO WHOM DO YOU OWE YOUR OBLIGATIONS?
 
 <span style="color: rgb(159, 29, 33);">
