--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v09-13-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v09-13-Viet.md
@@ -51,6 +51,10 @@ Nhưng có một tin mừng cho chúng ta là Phao-lô tuyên bố rằng *"thâ
 
 Trong câu 11, Phao-lô khích lệ các tín hữu Rô-ma đừng tìm cách cải thiện những xác chết nữa, vì khi Đấng Christ trở lại khi tiếng kèn chót thổi, thì Thánh Linh là Đấng đã làm Chúa Giê-su sống lại cũng sẽ ban cho chúng ta thân thể bất diệt (1 Cor 15:51-52).
 
+Trong Ga-la-ti 3:1-3, Phao-lô đã luận về sự hư không của những nỗ lực dùng xác thịt để tự thánh hóa chính mình.
+
+> <sup>1</sup>Hỡi <strong>người Ga-la-ti ngu muội</strong> kia, ai bùa ếm anh em là người Ðức Chúa Jêsus Christ bị đóng đinh trên thập tự giá?  <sup>2</sup>Tôi chỉ hỏi anh em một câu nầy: <strong>Ấy là cậy các việc luật pháp hay là bởi nghe và tin mà anh em đã nhận được Ðức Thánh Linh?</strong>  <sup>3</sup>Sao anh em ngu muội dường ấy? Sau khi đã <strong>khởi sự nhờ Ðức Thánh Linh</strong>, nay sao lại <strong>cậy xác thịt mà làm cho trọn</strong>? (Galatians 3:1-3)
+
 ## MẮC NỢ AI?
 
 <span style="color: rgb(159, 29, 33);">
