Further clarification of in-the-flesh

--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v09-13-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v09-13-Viet.md
@@ -36,6 +36,8 @@ Vậy, *"nếu thật quả Thánh Linh Ðức Chúa Trời ở trong mình,"* b
 
 Lời cảnh cáo của Phao-lô không nhắm vào những người vi phạm luật pháp, nhưng vào những người tìm cách tuân theo luật pháp để được xưng công bình.
 
+Trong sách Ga-la-ti có một câu mang ý nghĩa tương tự với *"không sống theo xác thịt, nhưng theo Thánh Linh,"* đó là Galatians 5:18: *"Nhưng, ví bằng anh em nhờ Thánh Linh chỉ dẫn, thì chẳng hề ở dưới luật pháp."* Câu này cho chúng ta thấy sự liên hệ giữa *"theo xác thịt"* và *"dưới luật pháp."* Mặc dầu chữ "xác thịt" có thế mang một ý nghĩa không rõ rệt, nhưng không có điều gì mơ hồ về chữ  "dưới luật pháp." Thực ra, câu 9 có thể được viết lại như sau *"nếu thật quả Thánh Linh Đức Chúa Trời ở trong mình, thì anh em chẳng hề ở dưới luật pháp."* Do đó, nếu bạn vẫn còn ở dưới luật pháp, thì hẳn nhiên Đức Thánh Linh không ngự trong lòng bạn.
+
 Bây giờ chúng ta hãy suy gẫm về sự bước đi theo Thánh Linh. Đó là sự đặt trọn niềm tin nơi điều Đấng Christ đã làm trọn trên cây thập tự, nhận biết rằng chẳng có việc lành nào mình làm có thể đạt được sự công bình ngoại trừ sự Chúa đã làm thay cho mình. Vì mọi nỗ lực để đạt được sự công bình của Đức Chúa Trời qua bất cứ một phương tiện nào khác đều chỉ là "tấm áo nhớp," như được diễn tả trong Isaiah 64:6.
 
 ## THÂN THỂ CHẾT NHÂN CỚ TỘI LỖI
