--- a/_posts/bible-studies/Romans/2022-11-13-Romans-08-v09-13.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-08-v09-13.md
@@ -37,6 +37,8 @@ So, *"if indeed the Spirit of God lives in you,"* you no longer rely on your fle
 
 Paul's warning is directed not towards those who break the law, but towards those who are attempting to achieve holiness through adherence to it.
 
+Galatians contains another verse that parallels the phrase *"not in the flesh but in the Spirit,"* which can be found in Galatians 5:18: *"But if you are led by the Spirit, you are not under the law."* This verse draws a comparison between *"in the flesh"* and *"under the law."* Although there may be some ambiguity regarding *"in the flesh,"* the same is not true for *"under the law."* In fact, one could rephrase verse 9 as *"if the Spirit of God dwells in you, you are not under the law."* Therefore, if you are still living according to the law, it is evident that the Holy Spirit does not reside within you.
+
 Let us now consider the meaning of being in the Spirit. It entails placing your complete trust in the completed work of Christ on the cross, acknowledging that no good works you do can make you righteous before God except what Jesus has already accomplished on your behalf. Any attempt to attain God's standard of righteousness through other means is regarded as "filthy rags," as Isaiah 64:6 describes it.
 
 ## YOUR BODY IS DEAD
