--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -111,6 +111,10 @@ The key concepts gathered from the study of this passage: No condemnation. The l
 
 The key concepts gathered from the study of this passage: In the flesh. Your body is dead. To whom do you owe your obligations?
 
+##  [<u>Romans 8:14-23</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-08-v14-23 %})
+
+The key concepts gathered from the study of this passage: Led by the Spirit. Spirit of slavery vs. adoption. The Spirit’s voice. Suffering with Christ. Present suffering.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
