--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v14-23-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v14-23-Viet.md
@@ -25,7 +25,7 @@ comments_locked: false
 <div>
 <p>
 <img alt src="http://vacsf.org/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-    <span style="color: rgb(159, 29, 33);"><i>"<sup>14</sup>Vì hết thảy kẻ nào <strong>được Thánh Linh của Ðức Chúa Trời dắt dẫn</strong>, đều là con của Ðức Chúa Trời."</i></span> (Romans 8:14)<br />Người tín hữu thường được khuyên nên tìm sự dẫn dắt của Đức Thánh Linh thay vì ỷ lại váo sức mình. Thế nhưng, điều này dẫn đến một nghi vấn là làm sao họ có thể thực hiện được điều đó. Họ có nên để thêm thì giờ cầu nguyện hay tìm một đoạn kinh thánh có vẻ đang nói về tình trạng hiện tại của mình? Thêm nữa, là trong giai đoạn khẩn cấp để tìm câu giải đáp, họ dễ bị cám dỗ của những lời khuyên nhủ từ những người có vẻ có thẩm quyền tâm lình.</p>
+    <span style="color: rgb(159, 29, 33);"><i>"<sup>14</sup>Vì hết thảy kẻ nào <strong>được Thánh Linh của Ðức Chúa Trời dắt dẫn</strong>, đều là con của Ðức Chúa Trời."</i></span> (Romans 8:14)<br />Người tín hữu thường được khuyên nên tìm sự dẫn dắt của Đức Thánh Linh thay vì ỷ lại vào sức mình. Thế nhưng, điều này dẫn đến một nghi vấn là làm sao họ có thể thực hiện được điều đó. Họ có nên để thêm thì giờ cầu nguyện hay tìm một đoạn kinh thánh có vẻ đang nói về tình trạng hiện tại của mình? Thêm nữa, là trong giai đoạn khẩn cấp để tìm câu giải đáp, họ dễ bị cám dỗ của những lời khuyên nhủ từ những người có vẻ có thẩm quyền tâm lình.</p>
 </div>
 
 Tóm lại, họ muốn làm một hành động cụ thể nào đó, như chờ đợi tiếng của Thánh Linh phán trong lòng, hoặc một việc có vẻ như họ đang được sự hướng dẫn của Ngài.
