--- a/_posts/bible-studies/Romans/2022-11-13-Romans-08-v14-23.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-08-v14-23.md
@@ -37,6 +37,8 @@ However, while the Bible may not provide specific instructions for every situati
 
 To put it differently, the Holy Spirit will not guide you if you are living under the law. The crucial question to ask yourself is whether you are living according to a law that you believe will earn you God's favor or acceptance. This is the only law that Paul is referring to in Galatians 5:18. In fact, Paul warns against seeking righteousness through the law in Galatians 5:4. Beyond this, God gives you the freedom to make decisions on anything that does not bring shame to the gospel of Christ. Use your common sense.
 
+In essence, being guided by the Spirit does not require constant self-awareness or questioning about His guidance. Instead, when you keep your focus on Jesus and trust in His completed work, you know that you are no longer under the law. By resting in Christ, you accomplish one thing and achieve another. You find assurance in being led by the Spirit. It is the marvelous mystery and beauty of Christ residing in you, the hope of glory (Col 1:27).
+
 ## SPIRIT OF SLAVERY vs. ADOPTION
 
 <span style="color: rgb(159, 29, 33);">
