--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -116,6 +116,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Đư
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Trông điều mình không thấy. Thở than không thể nói ra. Mọi sự hiệp lại làm ích. Nếu Chúa vùa giúp chúng ta.
 
+##  [<u>Rô-ma 9:1-8</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-09-v01-08-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tuyển dân của Chúa. Con cái thuộc về lời hứa.
+
 ## Lần viết đầu tiên - 2015
 
 Những lời Phao-lô viết trong sách Rô-ma thường bị hiểu lầm, hoặc đọc với nhiều nghi vấn, rằng nó có thể cho người đọc được tự do phạm tội. Đây không phải là ý của Romans 3:20. Nói một cách thực tế, câu đó tuyên bố rằng dù có làm điều lành bạn cũng không được gần Chúa hơn, hoặc làm điều dữ cũng không khiến bạn xa Chúa hơn, vì mục đích chính của luật pháp là chỉ cho chúng ta thấy tình trạng tội lỗi của mình. Nó là tia quang tuyến chiếu vào lòng người cho thấy tình trạng hư hoại tận cùng. Nó chẳng chữa lành, cũng chẳng ban sự sống.
