Rewrote parable of the talents

--- a/_posts/articles/2015-05-18-Talents.md
+++ b/_posts/articles/2015-05-18-Talents.md
@@ -1,9 +1,9 @@
 ---
 title: "Parable of the Talents"
-excerpt: "This parable is not about money, but it is a mockery of those who think they can buy God's kingdom with their wealth. (Luke 16:1-8)."
+excerpt: "The purpose of this parable is not to provide instructions on attaining salvation, but rather to illustrate why salvation can only be achieved through faith in Christ."
 image: 
   teaser: parable-talents-teaser.png
-tags: [parable, bible-studies]
+tags: [parable, bible-studies, talents]
 featured: false
 modified:
 comments: true
@@ -20,43 +20,33 @@ feature:
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/talents.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Contrary to what you might find with a search on the internet, radio, or books, or virtually all sermons you've ever heard, this parable is not about money, talents, or how you use your possessions toward God's kingdom. Let's go through this parable again, as if you've never read it before, never having heard it preached before, while only keeping in mind that you should not try to understand this parable by itself without placing it in context of the entire salvation foundation of the Bible.
+During Jesus' teaching of the parable of the talents, it was still within the context of the Old Covenant, before His crucifixion and the establishment of the New Covenant. His teachings aimed to demonstrate to humanity that their sole hope rested in the cross. The purpose of the law and its commandments was to reveal to people that salvation could not be attained through strict adherence to it. In a similar vein, Jesus utilized the parable of the talents to convey the same message, emphasizing that: <i>"No one is declared righteous before him by the works of the law, for through the law comes the knowledge of sin."</i> (Romans 3:20)
 </p>
 </div>
 
-## Worldly Wisdom
 
-> <sup>1</sup>Jesus also said to the disciples, "There was a rich man who was informed of accusations that his manager was wasting his assets.  <sup>2</sup>So he called the manager in and said to him, 'What is this I hear about you? Turn in the account of your administration, because you can no longer be my manager.'  <sup>3</sup>Then the manager said to himself, 'What should I do, since my master is taking my position away from me? I'm not strong enough to dig, and I'm too ashamed to beg.  <sup>4</sup>I know what to do so that when I am put out of management, people will welcome me into their homes.'  <sup>5</sup>So he contacted his master's debtors one by one. He asked the first, 'How much do you owe my master?'  <sup>6</sup>The man replied, 'A hundred measures of olive oil.' The manager said to him, 'Take your bill, sit down quickly, and write fifty.'  <sup>7</sup>Then he said to another, 'And how much do you owe?' The second man replied, 'A hundred measures of wheat.' The manager said to him, 'Take your bill, and write eighty.'  <sup>8</sup>The master commended the dishonest manager because he acted shrewdly. For the people of this world are more shrewd in dealing with their contemporaries than the people of light. (Luke 16:1-8)
+## Parable of the talents
 
-Who do you think this rich man was? Did Jesus use him to talk about Himself? An overwhelming majority thinks so. But verse 8 shows us the rich man does NOT represent Christ, because He cannot and will not <span class="green-letter">"commended the dishonest manager because he acted shrewdly."</span> The master of this evil steward, or the people of this world, cannot be a representation of the living God. In the mindset and value system of this world, a shrewd manager like the man in the parable, though may have acted against the interest of the master, his cleverness may in fact benefit him far beyond a temporary damage. But this cannot be true in the Kingdom of Heaven. This shrewd manager does not exhibit any characteristic of a man who has faith.
+> <sup>14</sup> "For it is like a man going on a journey, who summoned his slaves and entrusted his property to them.  <sup>15</sup> To one he gave five talents, to another two, and to another one, each according to his ability. Then he went on his journey.  <sup>16</sup> The one who had received five talents went off right away and put his money to work and gained five more.  <sup>17</sup> In the same way, the one who had two gained two more.  <sup>18</sup> But the one who had received one talent went out and dug a hole in the ground and hid his master's money in it.  <sup>19</sup> After a long time, the master of those slaves came and settled his accounts with them.  <sup>20</sup> The one who had received the five talents came and brought five more, saying, 'Sir, you entrusted me with five talents. See, I have gained five more.'  <sup>21</sup> His master answered, 'Well done, good and faithful slave! You have been faithful in a few things. I will put you in charge of many things. Enter into the joy of your master.'  <sup>22</sup> The one with the two talents also came and said, 'Sir, you entrusted two talents to me. See, I have gained two more.'  <sup>23</sup> His master answered, 'Well done, good and faithful slave! You have been faithful with a few things. I will put you in charge of many things. Enter into the joy of your master.'  <sup>24</sup> Then the one who had received the one talent came and said, 'Sir, I knew that you were a hard man, harvesting where you did not sow, and gathering where you did not scatter seed,  <sup>25</sup> so I was afraid, and I went and hid your talent in the ground. See, you have what is yours.'  <sup>26</sup> But his master answered, 'Evil and lazy slave! So you knew that I harvest where I didn't sow and gather where I didn't scatter?  <sup>27</sup> Then you should have deposited my money with the bankers, and on my return I would have received my money back with interest!  <sup>28</sup> Therefore take the talent from him and give it to the one who has ten.  <sup>29</sup> For the one who has will be given more, and he will have more than enough. But the one who does not have, even what he has will be taken from him.  <sup>30</sup> And <strong>throw that worthless slave into the outer darkness</strong>, where there will be weeping and gnashing of teeth.' (Matthew 25:14-30)
 
-What about us, what do we think of God? What do we know about His value system concerning life, fruitfulness, and the value of a person? Does he value a shrewd man like this manager? What lesson is Jesus trying to teach us in this parable? The two main characters in this parable seem more fitting for this world than for God's kingdom. Do you expect to learn anything from their dealings and value assessment? Do you really think Jesus is using them as models for us to follow?
+The inclusion of the phrase ***"throw that worthless slave into the outer darkness"*** in this parable indicates that its purpose is not to instruct on godly living or provide exhortation, but rather to establish a condition for salvation. However, a Christian who comprehends the gospel understands that under the New Covenant, salvation is solely based on faith in Christ and His finished work on the cross.
 
-## Can worldly treasure buy eternal life?
+Let us explore other teachings of Jesus that align with this parable.
 
-> <sup>9</sup>And I tell you, make friends for yourselves by how you use worldly wealth, so that when it runs out you will be welcomed into the eternal homes. (Luke 16:9)
+In Matthew 19:16-22, we encounter the story of a wealthy young man who approached Jesus, seeking guidance on attaining eternal life. Jesus responded by saying, *"If you wish to be perfect, go sell your possessions and give the money to the poor, and you will have treasure in heaven. Then come, follow me."* Now, let us suppose that you somehow possess certain knowledge about the number of talents God has entrusted to you, and you were able to double the talents you were given. Would you be able to pass the test that the young man faced?
 
-There is a term called "isogesis" which means interpreting a Bible passage as a stand alone concept without regarding its surrounding context. If we do this when interpreting this passage, we'd almost assuredly key in to the phrase "welcomed into the eternal homes" and jump to the conclusion that this verse shows us how we prepare ourselves for heaven. This is the conventional interpretation of the church at large. But as I preluded at the beginning of this article that we should consider this verse, or any verse for that matter, in the larger context of how God saves us. The larger context says that Jesus is the only way, the only truth, and the only life, through whom we can have any hope of heaven. Then this verse cannot be be interpreted in the isolated manner above at all.
+In Mark 12:30-31, Jesus issued a command for us to wholeheartedly love God with all our heart, mind, and strength, as well as to love others as we love ourselves. Let us now compare this command with the parable of the talents to determine which one presents a greater challenge. Once again, assuming that you pass the test related to talents, can you also pass this commandment?
 
-The targets of Jesus' parable are those who do not yet possess a saving faith. Folks such as the teachers of the law, the Pharisees, the Hebrews who were steeped in Mosaic laws, the Gentiles with their respective religions. In short, the entire world is still deep in sin, and the gospel was not yet communicated to the world until Christ rose from the dead and returned to heaven. Those who were listening to the parable, or the whole world for that matter, though they might be willing to give up all their possessions in the hope of purchasing their way into the kingdom of God, they will not get in, because there is only one way to enter heaven that is through faith in the Lamb of God who offered himself to be a ransom for the world.
+## How many talents do you have?
 
-But let us suppose that the listeners were believers, those who called on Christ as their Lord and Savior, then they don't need to "make friends for yourselves by how you use worldly wealth," because the kingdom of heaven is already theirs. In this case Jesus didn't even need to tell them this parable.
+Is it possible for anyone to accurately determine the exact number of talents given to them by God? Can you truly rely on your own assessment of the talents you possess, considering they originate from God? Is there an objective standard to gauge this, or is it a subjective matter?
 
-Therefore verse 9 must be a challenge, or a cynical statement, of Jesus: "You who are the wise ones of this world, you use your wealth to buy influence, to garner peace. You have gained for yourselves the whole world. But do you think you can buy Heaven? And those who became your friends through your unrighteous wealth, do you believe they are truly the citizens of heaven to welcome you?
+Without an objective standard, no one can definitively determine the number or nature of talents they thought bestowed upon them by God. This is separate from the standard required to fulfill God's expectations regarding the utilization of these talents.
 
-Do you readers see the hidden truth in this parable? Can you see the cynicism? Can you see that Jesus was mocking His listeners who were mostly wealthy and influential religious leaders?
+It is important to note that the parable of the talents should not be employed as a means to ascertain one's salvation, as that is not its intended purpose. Rather, it serves as a temporary guide until the arrival of Christ.
 
-## The only kind of faithfulness God requires
+>  "<sup>24</sup>Thus the law had become our guardian until Christ, so that we could be declared righteous by faith.  <sup>25</sup>But now that faith has come, we are no longer under a guardian (Galatians 3:24-25)."
 
-> <sup>10</sup>The one who is faithful in a very little is also faithful in much, and the one who is dishonest in a very little is also dishonest in much.  <sup>11</sup>If then you haven't been trustworthy in handling worldly wealth, who will entrust you with the true riches?  <sup>12</sup>And if you haven't been trustworthy with someone else's property, who will give you your own? (Luke 16:10-12)
-
-Jesus summarized the ten commandments of God into two most important ones: <span class="green-letter">"<sup>37</sup>'Love the Lord your God with all your heart, with all your soul, and with all your mind.'  <sup>38</sup>This is the first and greatest commandment.  <sup>39</sup>The second is like it: 'Love your neighbor as yourself.'  <sup>40</sup>All the law and the prophets depend on these two commandments." (Matthew 22:37-40)</span> These two commandments are in fact ten thousand times more impossible than the original ten, because whoever thinks that he can carry them out, thinks too highly of himself. Let's consider a more possible commandment: Keep the Sabbath to make it holy. Who among the keepers of Mosaic laws  can fulfill it to God's perfect standard? If a person is considered an adulterer just for lustful thoughts without actually committing it, wouldn't it be the same with a Sabbath keeper, that though he can keep it physically, can he keep it in his mind? Absolutely not.
-
-Then who can claim himself to be faithful in everything in this life? Because according to James 2:10, being unfaithful in one thing is like being unfaithful in all things. Therefore what Jesus said in verses 10-12 above is a statement of condemnation to all listeners that they were all unfaithful, without exception. 
-
-But there is one thing that God gave us that He demands our faithfulness, that is faith in Christ. That is faith in Him, not in ourselves. Romans 1:17 writes: <span class="green-letter">"The just shall live by faith."</span> Abraham was declared righteous for his faith. John 3:16 writes: <span class="green-letter">"Whoever believes in the Son of God will not perish, but has eternal life."</span> And many Scriptures that write of the same truth. Only of that faith that God demands our faithfulness. Only that faithfulness is the condition for us to receive the gift of an eternal inheritance, the "true riches" in this parable.
-
-Being faithful in keeping this faith that was once delivered to the saints. Being faithful in relying only on Jesus as the way to the promise land. Being faithful refusing to rely on good works to attain God's righteousness. Being faithful in the belief that God will carry out His promise concerning our salvation. That is the true faithfulness that Jesus speaks of in this parable. You must read this parable through spiritual eyes so you may understand its true meaning.
+The parable of the talents, along with other guardians, cannot grant us salvation. It is solely through Christ that salvation can be obtained.
 
 {% include bible-study/bible-study-footer %}
-
