--- a/_posts/articles/2015-05-18-Talents.md
+++ b/_posts/articles/2015-05-18-Talents.md
@@ -4,7 +4,7 @@ excerpt: "The purpose of this parable is not to provide instructions on attainin
 image: 
   teaser: parable-talents-teaser.png
 tags: [parable, bible-studies, talents]
-featured: false
+featured: true
 modified:
 comments: true
 feature:
