--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -123,6 +123,10 @@ The key concepts gathered from the study of this passage: Hope for what we do no
 
 The key concepts gathered from the study of this passage: God’s special people. True descendants.
 
+##  [<u>Romans 9:9-29</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-09-v09-29 %})
+
+The key concepts gathered from the study of this passage: God’s calling vs human efforts. God’s sovereignty. My thoughts are not your thoughts.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
