--- a/_posts/bible-studies/Romans/2022-11-13-Romans-09-v30-10-21.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-09-v30-10-21.md
@@ -73,7 +73,7 @@ Even in the remote corners of the world, where individuals may not have had the 
 > nor is its voice literally heard.  <sup>4</sup>Yet its voice echoes throughout the earth; 
 > its words carry to the distant horizon. (Psalm 19:1-4)
 
-Therefore, when Paul poses the rhetorical question, "Have they not heard?" he is aware that they must have already heard the message. As he affirms, ***"Their voice has gone out to all the earth, and their words to the ends of the world."*** In doing so, he echoes the inspiration of the Psalmist in chapter 19, verses 1 through 4, as mentioned earlier.
+Therefore, when Paul poses the rhetorical question, ***"Have they not heard?"*** he is aware that they must have already heard the message. As he affirms, ***"Their voice has gone out to all the earth, and their words to the ends of the world."*** In doing so, he echoes the inspiration of the Psalmist in chapter 19, verses 1 through 4, as mentioned earlier.
 
 Hence, no one can provide the excuse that they have never heard the call of God, particularly when it comes to Israel. God has consistently spoken to them through prophets across countless generations. Therefore, He refers to them as a ***"disobedient and stubborn people."***
 
