--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -131,6 +131,10 @@ The key concepts gathered from the study of this passage: God’s calling vs hum
 
 The key concepts gathered from the study of this passage: The two kinds of righteousness. Zeal that is based on the truth. Salvation is near. A disobedient people.
 
+##  [<u>Romans 11:1-12:2</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-11-v01-12-02 %})
+
+The key concepts gathered from the study of this passage: A remnant chosen by grace. Grace vs. works. God's mercy to all. A holy and living sacrifice.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
