--- a/_posts/bible-studies/Romans/2022-11-13-Romans-11-v01-12-02.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-11-v01-12-02.md
@@ -51,6 +51,8 @@ No where in else in the Bible does it express more clearly the utter incompatibi
 
 > <sup>8</sup>And God, who knows the heart, has testified to them by giving them the Holy Spirit just as he did to us, <sup>9</sup>and he made no distinction between them and us, <strong>cleansing their hearts by faith</strong>. <sup>10</sup>So now why are you putting God to the test by placing on the neck of the disciples <strong>a yoke that neither our ancestors nor we have been able to bear</strong>? (Acts 15:8-10)
 
+The cleansing of their hearts is achieved through faith, not by adhering to the works of the law.
+
 ## GOD'S MERCY TO ALL
 
 <span style="color: rgb(159, 29, 33);">
