Changed featured flag

--- a/_posts/articles-viet/2015-05-18-Ta-Lang.md
+++ b/_posts/articles-viet/2015-05-18-Ta-Lang.md
@@ -4,7 +4,7 @@ excerpt: "Mục đích của ngụ ngôn này không phải để dạy chúng t
 image: 
   teaser: parable-talents-teaser.png
 tags: [ngụ-ngôn, ta-lâng]
-featured: true
+featured: false
 modified:
 comments: true
 feature:
